Added Heading Area
Setup the basic heading area. Still need to setup the nav area and probably move some css around a bit.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="author" content="William Mollenkopf III" /> 
+    <meta name="description" content="I'm William Mollenkopf, a creative programmer who loves learning and making cool things." />
+    <meta name="keywords" content="William Mollenkopf, Interactive Resume, JavaScript Developer, PHP programmer, Web developer, Software Developer, Startup, Interactive CV, Resume, CV, Algorithms, JavaScript, PHP, MySQL, OOP, Oracle, 日本語, C#, C++, C, Java, Systems Administrator, Systems Administration" />
+    <meta name="robots" content="index, follow" />
+    <meta name="revisit-after" content="14 days" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -19,9 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>William Mollenkopf's Interactive Resume - Programmer, Systems Administrator, 日本語の学生</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   </head>
-  <body>
+  <body data-spy="scroll" data-target="#navbar-example">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
