--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>William Mollenkopf's Interactive Resume - Programmer, Systems Administrator, 日本語の学生</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body data-spy="scroll" data-target="#navbar-example" refs="body">
     <noscript>
