Finally fixed scroll bar scrolling spying match.

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
-  <body data-spy="scroll" data-target="#navbar-example" refs="body">
+  <body data-spy="scroll" data-target=".navbar" data-offset="50" refs="body">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
