Small bug fix, probably need to give up trying to get the navbar to work.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000">
     <meta name="author" content="William Mollenkopf III" /> 
     <meta name="description" content="I'm William Mollenkopf, a creative programmer who loves learning and making cool things." />
-    <meta name="keywords" content="William Mollenkopf, Interactive Resume, JavaScript Developer, PHP programmer, Web developer, Software Developer, Startup, Interactive CV, Resume, CV, Algorithms, JavaScript, PHP, MySQL, OOP, Oracle, 日本語, C#, C++, C, Java, Systems Administrator, Systems Administration" />
+    <meta name="keywords" content="William Mollenkopf, JavaScript Developer, PHP programmer, Web developer, Software Developer, Startup, Algorithms, JavaScript, PHP, MySQL, OOP, Oracle, 日本語, C#, C++, C, Java, Systems Administrator, Systems Administration" />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="14 days" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>William Mollenkopf's Interactive Resume - Programmer, Systems Administrator, 日本語の学生</title>
+    <title>William Mollenkopf - Programmer, Systems Administrator, 日本語の学生</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     
